update spring boot implementation

--- a/POS_FrontEnd/src/index.html
+++ b/POS_FrontEnd/src/index.html
@@ -342,7 +342,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>ja
     <table class="table table-hover border mt-3 p-3 ">
         <thead class="bg-danger text-white">
         <tr>
@@ -363,7 +363,9 @@
 <script src="assest/bootstrap/js/jquery-3.6.0.js"></script>
 
 <script src="js/item.js"></script>
-<script src="js/customer.js"></script>
+<!--<script src="js/customer.js"></script>-->
+<script src="src/js/CustomerHandler.js"></script>
+<script src="src/js/order.js"></script>
 
 
 </body>
